syntax = "proto3";

package event;
option go_package = "github.com/hihoak/otus-course-hws/hw12_13_14_15_calendar";

import "api/google/api/annotations.proto";
import "api/google/protobuf/timestamp.proto";
import "api/google/type/datetime.proto";

service EventService {
  rpc CreateEvent(AddEventRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/event/create"
      body: "*"
    };
  }

  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {
    option (google.api.http) = {
      post: "/event/get"
      body: "*"
    };
  }

  rpc DeleteEvent(DeleteEventRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/event/delete"
      body: "*"
    };
  }

  rpc ListEvent(ListEventRequest) returns (ListEventResponse) {
    option (google.api.http) = {
      post: "/event/list"
      body: "*"
    };
  }

  rpc ModifyEvent(ModifyEventRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/event/modify"
      body: "*"
    };
  }
}

message AddEventRequest {
  string title = 2;
  google.type.DateTime start_date = 3;
  google.type.DateTime end_date = 4;
  string description = 5;
  string user_id = 6;
  google.type.DateTime notify_date = 7;
}

message DeleteEventRequest {
  string id = 1;
}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message ListEventRequest {}

message ListEventResponse {
  repeated Event events = 1;
}

message ModifyEventRequest {
  string id = 1;
  string title = 2;
}

message Event {
  string id = 1;
  string title = 2;
  google.type.DateTime start_date = 3;
  google.type.DateTime end_date = 4;
  string description = 5;
  string user_id = 6;
  google.type.DateTime notify_date = 7;
}

message Empty {}
